# mdd_app

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  cargo.toml  pubspec.yaml  scripts.py
.github/workflows/: release.yml  test.yml
android/app/: build.gradle  build.gradle.kts
assets/data/: countries.geojson
assets/icons/: favicon512.psd
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/explore/: explore.dart  explore_page.dart  form.dart
lib/screens/favorites/: favorites.dart
lib/screens/home/: home.dart  mil_carousel.dart  page.dart  search.dart  setup.dart  stats.dart  welcome.dart
lib/screens/menu/: data_update.dart  menu.dart  settings.dart  version.dart
lib/screens/more/: more.dart
lib/screens/search/: fields.dart  page.dart  search.dart
lib/screens/shared/: card.dart  info_card.dart  loadings.dart  messages.dart  navigation.dart  search.dart
lib/screens/species/: species_page.dart  synonyms.dart
lib/screens/statistics/: chart_card.dart  country_bar_chart.dart  decade_bar_chart.dart  domestic_pie_chart.dart  extinct_pie_chart.dart  page.dart  (+11 more)
lib/services/: app_services.dart  common_names.dart  essential_url.dart  export.dart  species_list.dart  statistics.dart  synonyms.dart  system.dart  text_parser.dart  topojson_parser.dart  utils.dart
lib/styles/: themes.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
mdd_api/: CHANGELOG.md  Cargo.toml
mdd_api/data/: META_v1.13.csv  meta_tables  test.json
mdd_api/src/: args.rs  lib.rs  main.rs  parser.rs  writer.rs
mdd_api/src/helper/: country_code.rs  mod.rs
mdd_api/src/parser/: country.rs  mdd.rs  metadata.rs  mod.rs  synonyms.rs
mdd_api/tests/: test_metadata.rs
mdd_api/tests/data/: export.json  release.toml  syndata.csv  test_data.csv
packaging/: control.template  mdd.desktop  mdd.spec
rust/: Cargo.toml
rust/src/: db_generator.rs  frb_generated.rs  lib.rs  main.rs
rust/src/api/: mod.rs  parser.rs  writer.rs
rust/tests/: integration_tests.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_mdd.podspec  rust_lib_test_mdd.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_mdd.podspec  rust_lib_test_mdd.podspec
rust_builder/windows/: CMakeLists.txt
snap/: snapcraft.yaml
test/: chart_card_test.dart  indicator_test.dart  statistics_test.dart  taxon_widgets_test.dart  topojson_parser_test.dart  utils_test.dart  widget_test.dart
tool/: generate_db.dart
tools/: build.sh  generate_prefilled_db.sh
tools/svg_generator/: .env  .env.example  README.md  main.py  pyproject.toml
tools/svg_generator/tests/: test_main.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+33 files in other folders)
