[package]
name = "mdd_api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mammaldiversity/mdd_app"
keywords = ["utility", "biodiversity"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempdir = "0.3.7"
