[package]
name = "mdd_api"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/mammaldiversity/mdd_app"
authors = ["Heru Handika <herubiolog@gmail.com>"]
homepage = "https://www.mammaldiversity.org/"
license = "MIT"
readme = "../README.md"
description = "Rust API for Mammal Diversity Database"
keywords = ["utility", "biodiversity"]
categories = ["command-line-utilities", "science"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.18", features = ["derive", "cargo"] }
convert_case = "0.8.0"
csv = "1.3.0"
flate2 = "1.0.34"
glob = "0.3.2"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempdir = "0.3.7"
toml = "0.9.5"
zip = "4.0.0"

[[bin]]
name = "mdd"
path = "src/main.rs"
