[package]
name = "rust_lib_mdd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flate2 = "1.1.9"
flutter_rust_bridge = "=2.12.0"
mdd_api = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tar = "0.4.46"
toml = "1.1.2"
zip = { version = "8.6.0", features = ["deflate"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
regex = "1.11.0"
